[package]
authors = ["Ashutosh Varma <ashutoshvarma11@live.com>"]
edition = "2018"
exclude = ["artifacts.json", "native.node"]
license = "(MIT AND Apache-2.0)"
name = "near-sim-bindings"
version = "3.1.0"

[lib]
crate-type = ["cdylib"]
name = "near_sim_bindings"

[dependencies.neon]
default-features = false
features = ["napi-6"]
version = "0.8.2"

[dependencies]
near-primitives = "=0.1.0-pre.1"
near-sdk = {version = "3.1.0"}
near-sdk-sim = {version = "3.2.0"}
serde = {version = "1", features = ["derive"]}

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic